--- a/.github/workflows/Build_OP_x86.yml
+++ b/.github/workflows/Build_OP_x86.yml
@@ -72,8 +72,8 @@ jobs:
         git clone https://github.com/fw876/helloworld.git
         mv helloworld/luci-app-ssr-plus/ ./lean
         rm -rf helloworld/
-        git clone https://github.com/garypang13/luci-app-eqos.git
-        mv luci-app-eqos/ ./lean
+    #    git clone https://github.com/garypang13/luci-app-eqos.git
+    #    mv luci-app-eqos/ ./lean
     #    git clone https://github.com/vernesong/OpenClash.git
     #    mv OpenClash/luci-app-openclash/ ./lean
     #    rm -rf OpenClash/
