--- a/.github/workflows/Build_OP_x86.yml
+++ b/.github/workflows/Build_OP_x86.yml
@@ -54,7 +54,7 @@ jobs:
         REPO_URL: https://github.com/coolsnowwolf/lede
         REPO_BRANCH: master
       run: git clone --depth 1 $REPO_URL -b $REPO_BRANCH openwrt
-           sed -i '5s/#//' openwrt/feeds.conf.default
+           sed -i '5s/#src-git/src-git/g' openwrt/feeds.conf.default
 
     - name: Update & Install feeds
       working-directory: ./openwrt
