--- a/.github/workflows/Build_OP_x86.yml
+++ b/.github/workflows/Build_OP_x86.yml
@@ -53,8 +53,10 @@ jobs:
       env: 
         REPO_URL: https://github.com/coolsnowwolf/lede
         REPO_BRANCH: master
-      run: git clone --depth 1 $REPO_URL -b $REPO_BRANCH openwrt
-           sed -i '5s/#src-git/src-git/g' openwrt/feeds.conf.default
+      run: |
+        git clone --depth 1 $REPO_URL -b $REPO_BRANCH openwrt
+        cd openwrt
+        sed -i '5s/#src-git/src-git/g' feeds.conf.default
 
     - name: Update & Install feeds
       working-directory: ./openwrt
