--- a/x86.config
+++ b/x86.config
@@ -96,6 +96,8 @@ CONFIG_PACKAGE_libltdl=y
 # CONFIG_PACKAGE_libminiupnpc is not set
 # CONFIG_PACKAGE_libnatpmp is not set
 # CONFIG_PACKAGE_libnettle is not set
+CONFIG_PACKAGE_libnetsnmp=y
+CONFIG_PACKAGE_snmpd=y
 # CONFIG_PACKAGE_libopus is not set
 # CONFIG_PACKAGE_libpcre2-16 is not set
 # CONFIG_PACKAGE_libplist is not set
