--- a/.github/workflows/Build_OP_x86_64.yml
+++ b/.github/workflows/Build_OP_x86_64.yml
@@ -46,9 +46,10 @@ jobs:
           mysql* \
           php*
         sudo -E apt-get update
-        sudo -E apt-get -y install build-essential asciidoc binutils bzip2 gawk gettext git libncurses5-dev libz-dev patch python3.5 python2.7 unzip zlib1g-dev lib32gcc1 libc6-dev-i386 subversion flex uglifyjs git-core gcc-multilib p7zip p7zip-full msmtp libssl-dev texinfo libglib2.0-dev xmlto qemu-utils upx libelf-dev autoconf automake libtool autopoint device-tree-compiler g++-multilib antlr3 gperf
+        sudo -E apt-get -y install build-essential asciidoc binutils bzip2 gawk gettext git libncurses5-dev libz-dev patch python3.5 python2.7 unzip zlib1g-dev lib32gcc1 libc6-dev-i386 subversion flex uglifyjs git-core gcc-multilib p7zip p7zip-full msmtp libssl-dev texinfo libglib2.0-dev xmlto qemu-utils upx libelf-dev autoconf automake libtool autopoint device-tree-compiler g++-multilib antlr3 gperf wget swig
         sudo -E apt-get -y autoremove --purge
         sudo -E apt-get clean
+    
     - name: Clone source code
       env: 
         REPO_URL: https://github.com/coolsnowwolf/lede
@@ -64,23 +65,21 @@ jobs:
         ./scripts/feeds update -a
         ./scripts/feeds install -a
 
-    - name: Import external feeds
+    - name: Add package
       working-directory: ./openwrt
       run: |
         cd package
         git clone https://github.com/Lienol/openwrt-package.git
-        git clone https://github.com/ywt114/Lienol-obsolete.git
-        mv Lienol-obsolete/luci-app-passwall/ ./lean
-        rm -rf Lienol-obsolete/
+        mv openwrt-package/lienol/luci-app-passwall/ ./lean
         git clone https://github.com/project-openwrt/luci-app-koolproxyR.git
         mv luci-app-koolproxyR/ ./lean
+        git clone https://github.com/rufengsuixing/luci-app-adguardhome.git
+        mv luci-app-adguardhome/ ./lean
     #    git clone https://github.com/garypang13/luci-app-eqos.git
     #    mv luci-app-eqos/ ./lean
     #    git clone https://github.com/vernesong/OpenClash.git
     #    mv OpenClash/luci-app-openclash/ ./lean
     #    rm -rf OpenClash/
-    #    git clone https://github.com/rufengsuixing/luci-app-adguardhome.git
-    #    mv luci-app-adguardhome/ ./lean 
     #    git clone https://github.com/frainzy1477/luci-app-clash.git
     #    mv luci-app-clash/ ./lean
 
