--- a/x86_64.config
+++ b/x86_64.config
@@ -88,6 +88,8 @@ CONFIG_PACKAGE_odhcp6c_ext_cer_id=0
 CONFIG_PACKAGE_odhcpd-ipv6only=y
 CONFIG_PACKAGE_odhcpd_ipv6only_ext_cer_id=0
 CONFIG_PACKAGE_open-vm-tools=y
+# CONFIG_PACKAGE_samba36-server is not set
+# CONFIG_PACKAGE_wsdd2 is not set
 CONFIG_PACKAGE_autocore=y
 CONFIG_PACKAGE_curl=y
 CONFIG_PACKAGE_diffutils=y
