--- a/x86_64.config
+++ b/x86_64.config
@@ -13,16 +13,29 @@ CONFIG_PACKAGE_ddns-scripts_aliyun=y
 CONFIG_PACKAGE_ddns-scripts_cloudflare.com-v4=y
 CONFIG_PACKAGE_ddns-scripts_dnspod=y
 # CONFIG_PACKAGE_autosamba is not set
+CONFIG_PACKAGE_blockd=y
+CONFIG_PACKAGE_cfdisk=y
 CONFIG_PACKAGE_dnsmasq_full_dhcpv6=y
 CONFIG_PACKAGE_glib2=y
+CONFIG_PACKAGE_hd-idle=y
+CONFIG_PACKAGE_hdparm=y
 CONFIG_PACKAGE_ip6tables=y
 CONFIG_PACKAGE_ipv6helper=y
+CONFIG_PACKAGE_kmod-dnsresolver=y
+CONFIG_PACKAGE_kmod-fs-autofs4=y
+CONFIG_PACKAGE_kmod-fs-msdos=y
+CONFIG_PACKAGE_kmod-fs-nfs=y
+CONFIG_PACKAGE_kmod-fs-nfs-common=y
 CONFIG_PACKAGE_kmod-ipt-nat6=y
 CONFIG_PACKAGE_kmod-iptunnel=y
 CONFIG_PACKAGE_kmod-nf-nat6=y
 CONFIG_PACKAGE_kmod-sit=y
+CONFIG_PACKAGE_kmod-usb-ehci=y
+CONFIG_PACKAGE_kmod-usb2=y
+CONFIG_PACKAGE_kmod-usb3=y
 CONFIG_PACKAGE_libattr=y
 CONFIG_PACKAGE_libffi=y
+CONFIG_PACKAGE_libmount=y
 CONFIG_PACKAGE_libtirpc=y
 # CONFIG_PACKAGE_luci-app-accesscontrol is not set
 CONFIG_PACKAGE_luci-app-adbyby-plus=y
