--- a/x86_64.config
+++ b/x86_64.config
@@ -110,6 +110,9 @@ CONFIG_PACKAGE_autocore=y
 CONFIG_PACKAGE_curl=y
 CONFIG_PACKAGE_diffutils=y
 CONFIG_PACKAGE_htop=y
+CONFIG_PACKAGE_iperf=y
+CONFIG_PACKAGE_iperf3=y
+CONFIG_PACKAGE_iperf3-ssl=y
 CONFIG_PACKAGE_libnetsnmp=y
 CONFIG_PACKAGE_losetup=y
 CONFIG_PACKAGE_nano=y
