--- a/.github/workflows/Build_OP_x86_64.yml
+++ b/.github/workflows/Build_OP_x86_64.yml
@@ -58,6 +58,7 @@ jobs:
         git clone --depth 1 $REPO_URL -b $REPO_BRANCH openwrt
         cd openwrt
         sed -i -E 's/#(src-git.+)(helloworld.+)/\1\2/' feeds.conf.default
+        sed -i '/(<%=pcdata(ver.luciversion)%>)/a\      built by ywt114' ./package/lean/autocore/files/x86/index.htm
 
     - name: Update & Install feeds
       working-directory: ./openwrt
@@ -71,6 +72,8 @@ jobs:
         cd package
         git clone https://github.com/xiaorouji/openwrt-package.git
         mv openwrt-package/lienol/luci-app-passwall/ ./lean
+        git clone https://github.com/project-openwrt/luci-app-unblockneteasemusic.git
+        mv luci-app-unblockneteasemusic/ ./lean
         git clone https://github.com/project-openwrt/luci-app-koolproxyR.git
         mv luci-app-koolproxyR/ ./lean
         git clone https://github.com/rufengsuixing/luci-app-adguardhome.git
@@ -90,11 +93,6 @@ jobs:
         [ -e $CONFIG_FILE ] && mv $CONFIG_FILE openwrt/.config
         chmod +x ./customize.sh && ./customize.sh
         cd openwrt && make defconfig
-
-    - name: Mods
-      working-directory: ./openwrt
-      run: |
-        git apply ../enable_autocore.diff
 
     - name: Download package
       working-directory: ./openwrt
