--- a/x86_64.config
+++ b/x86_64.config
@@ -2,6 +2,8 @@ CONFIG_TARGET_x86=y
 CONFIG_TARGET_x86_64=y
 CONFIG_TARGET_x86_64_DEVICE_generic=y
 CONFIG_PACKAGE_6in4=y
+CONFIG_TARGET_KERNEL_PARTSIZE=16
+CONFIG_TARGET_ROOTFS_PARTSIZE=170
 CONFIG_LUCI_LANG_zh-cn=y
 # CONFIG_LUCI_LANG_en is not set
 # CONFIG_LUCI_LANG_zh-tw is not set
